# greatpytools2025

./: .pre-commit-config.yaml  LICENSE  README.md  article.md  errors.txt  pyproject.toml
scripts/: checks.sh  demo.sh  setup.sh
src/: before.py  main.py  with_formatting_only.py  with_formatting_plus_linting.py
tests/: test_before.py  test_example.py
