[project]
name = "greatpy25"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["requests>=2.32.3"]

[dependency-groups]
dev = ["pytest>=8.4.1", "reorder-python-imports>=3.15.0", "ruff>=0.12.3"]


[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["./tests"]
