[project]
name = "greatpy25"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = ["pytest>=8.4.1", "reorder-python-imports>=3.15.0", "ruff>=0.12.3"]

[tool.ruff]
target-version="py313"

include = ["src/**.py", "tests/**.py"]
exclude= ["src/before.py", "src/with_formatting_only.py"]

lint.select = [
  "B",    # bugbear:    potential bugs
  "DTZ",  # datetimez:  warn about missing timezones
  "F",    # pyflakes:   potential errors
  "FURB", # refurb:     refurbishing and modernizing Python codebases
  "PERF", # perflint:   avoid performance anti-patterns
  "PL",   # pylint:     the oldest static code analyser ( sometimes a bit pedantic)
  "RUF",  # ruff:       rules introduced by ruff
  "S",    # bandit:     security issues
  "SIM",  # simplify:   helps you simplify your code
  "UP",   # pyupgrade:  upgrade syntax or newer versions of the language
]
lint.ignore = []

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["./tests"]
